tests/ast/positive/func.gp
int main () {
    return 3;
}

void thisFunc(int x, bool y) {
    bool m; 
}