tests/ast/negative/func_in_func.gp
int main () {

    void thisFunc(int x, bool y) {
        bool m; 

    }
}